# easy-aac-encoder

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
Include/: EasyAACEncoderAPI.h
examples/basic_transcoder/: main.cpp
include/: EasyAACEncoderAPI.h
src/: EasyAACEncoder.cpp  EasyAACEncoder.h  EasyAACEncoderAPI.cpp  EasyAACEncoderAPI.h  EasyDSSBuffers.cpp  EasyDSSBuffers.h  G711AToPcm.cpp  G711AToPcm.h  G726ToPcm.cpp  G726ToPcm.h  IDecodeToPcm.cpp  IDecodeToPcm.h  PcmToAac.cpp  PcmToAac.h  audio_buffer.cpp  audio_buffer.h  condef.h  decode_to_pcm.cpp  decode_to_pcm.h  dss_buffers.cpp  dss_buffers.h  easy_aac_encoder.cpp  easy_aac_encoder.h  easy_aac_encoder_api.cpp  g711.cpp  g711.h  g711_to_pcm.cpp  g711_to_pcm.h  g726.cpp  g726.h  g726_to_pcm.cpp  g726_to_pcm.h  outDebug.h  out_debug.h  pcm_to_aac.cpp  pcm_to_aac.h
src/include/: faac.h  faaccfg.h
src/libfaac/: aacquant.c  aacquant.h  backpred.c  backpred.h  bitstream.c  bitstream.h  channels.c  channels.h  coder.h  fft.c  fft.h  filtbank.c  filtbank.h  frame.c  frame.h  huffman.c  huffman.h  hufftab.h  ltp.c  ltp.h  midside.c  midside.h  psych.h  psychkni.c  tns.c  tns.h  util.c  util.h
src/libfaac/kiss_fft/: README  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
src/nbproject/: configurations.xml
src/testEasyAACEncoder/: main.cpp
testEasyAACEncoder/: Makefile  main.cpp
testEasyAACEncoder/nbproject/: Makefile-Debug.mk  configurations.xml
